# Neural-Codecs

./: .gitignore  AudioDec.py  README.md  neural-codec.bat  pyproject.toml  requirements.txt
.claude/: settings.local.json
audio_codec/: __init__.py  cli.py  config.py  installer.py  registry.py
audio_codec/codecs/: dac.py  encodec24.py  encodec48.py  funcodec_decoder.py  snac.py  soundstream.py  speechtokenizer.py
neural_codecs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
requirements/: base.txt  dac.txt  encodec.txt  funcodec.txt  snac.txt  soundstream.txt  speechtokenizer.txt
